--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,10 +1,17 @@
 spring:
-  profiles:
-    active: dev
   datasource:
+    url: jdbc:mysql://localhost:3306/${DB_NAME}
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/
-    username: root
+    username: ${DB_USER}
     password: ${DB_PASSWORD}
     hikari:
       auto-commit: false
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+        highlight_sql: true
+        use_sql_comments: true
