--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql_1:3306/glog_prod
-    username: lldjlocal
-    password: 1234
+    url: jdbc:mysql://mysql_1:3306/${DB_NAME}
+    username: ${EC2_DB_USER}
+    password: ${DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
