feat(refactor): 회원가입 시 401 문제 해결

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,8 +18,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: skang000316@gmail.com
-    password: jnycjehligygjnfg
+    username: bjw7099@gmail.com
+    password: srzwfeatyyvnisgd
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
