--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
         highlight_sql: true
         use_sql_comments: true
         default_batch_fetch_size: 100
+        ddl-auto: create  # 서버 시작 시 테이블을 새로 생성함
     defer-datasource-initialization: false
   mail:
     host: smtp.gmail.com
