--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,14 +24,15 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ${MAIL_USERNAME}
-    password: ${MAIL_PASSWORD}
+    username: skang000316@gmail.com
+    password: ycyostremmzueifz
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+        debug: true
 
 springdoc:
   default-produces-media-type: application/json
