--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
     redis:
       host: ${REDIS_HOST}
       port: ${REDIS_PORT}
-      password: ${REDIS_PW}
+      password: ${DEV_REDIS_PW}
   mail:
     host: smtp.gmail.com
     port: 587
