--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
   jpa:
     open-in-view: false
     hibernate:
-      ddl-auto: update  # 15,16추가
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
