--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -26,13 +26,17 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate # Flyway가 스키마 관리
     properties:
       hibernate:
         format_sql: false
         highlight_sql: false
         use_sql_comments: false
     show-sql: false
+  flyway:
+    enabled: true
+    baseline-on-migrate: true # 기존 DB에 적용 시 필요
+    locations: classpath:db/migration
 
 logging:
   level:
@@ -52,8 +56,8 @@ custom:
 
   jwt:
     secretPattern: ${JWT_SECRET}
-    accessExpireSeconds: 1209600
-    refreshExpireSeconds: 1209600
+    accessExpireSeconds: 3600
+    refreshExpireSeconds: 604800
 
   cookie:
     secure: true
