--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,6 +15,8 @@ spring:
         format_sql: true
         highlight_sql: true
         use_sql_comments: true
+  flyway:
+    enabled: false
   data:
     redis:
       host: ${REDIS_HOST}
