--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -15,6 +15,8 @@ spring:
         format_sql: true
         highlight_sql: false
         use_sql_comments: true
+  flyway:
+    enabled: false
 cloud:
   aws:
     enabled: false
